--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<body>
-    <p>Hi there!</p>
-    <p>It works!</p>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8">
+    <title>消費カロリー計算</title>
+  </head>
+  <body>
+    <h1>今日の消費カロリー</h1>
+    
+
