--- a/blog/templates/blog/Fitnessgraph.html
+++ b/blog/templates/blog/Fitnessgraph.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>消費カロリー</h1>
-   
+    <h3>入力フォーム</h3>
+    
+    <h2>運動履歴</h2>
+    <table>
+      <tr>
+        <th>name</th>
+        <th>time</th>
+        <th>day</th>
+      </tr>
+      {% for active in Fitnessgraph %}
+      <tr>
+        <td>{{active.name}}</td>
+        <td>{{active.time}}</td>
+        <td>{{active.day}}</td>
+      </tr>
+    </table>
   </body>
   </html>
