--- a/blog/templates/blog/Fitnessgraph.html
+++ b/blog/templates/blog/Fitnessgraph.html
@@ -8,7 +8,7 @@
   <body>
     <h1>消費カロリー</h1>
     <h3>入力フォーム</h3>
-    
+
     <h2>運動履歴</h2>
     <table>
       <tr>
@@ -18,7 +18,7 @@
       </tr>
       {% for active in Fitnessgraph %}
       <tr>
-        <td>{{active.name}}</td>
+        <td>{{active.active}}</td>
         <td>{{active.time}}</td>
         <td>{{active.day}}</td>
       </tr>
