--- a/blog/templates/blog/Fitnessform.html
+++ b/blog/templates/blog/Fitnessform.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>今日の消費カロリー</h1>
-    <form class="" action="" method="post" enctype="multipart/form-data">
+    <form class="" action="" method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" name="submit">送信</button>
