--- a/blog/templates/blog/Fitnessgraph.html
+++ b/blog/templates/blog/Fitnessgraph.html
@@ -3,12 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>グラフ</title>
+    <title>消費カロリー計算</title>
   </head>
   <body>
-    <h1>消費カロリー</h1>
-    <h3>入力フォーム</h3>
-
     <h2>運動履歴</h2>
     <table>
       <tr>
@@ -22,6 +19,5 @@
         <td>{{active.time}}</td>
         <td>{{active.day}}</td>
       </tr>
-    </table>
   </body>
   </html>
