--- a/blog/templates/blog/Fitnessgraph.html
+++ b/blog/templates/blog/Fitnessgraph.html
@@ -19,5 +19,7 @@
         <td>{{active.time}}</td>
         <td>{{active.day}}</td>
       </tr>
+      {% endfor %}
+    </table>
   </body>
   </html>
