--- a/blog/templates/blog/Fitnessgraph.html
+++ b/blog/templates/blog/Fitnessgraph.html
@@ -6,6 +6,7 @@
     <title>消費カロリー計算</title>
   </head>
   <body>
+    <a href="{% url 'Fitnessform' %}">フォーム入力</a>
     <h2>運動履歴</h2>
     <table>
       <tr>
